fixes z-index bug

--- a/ui/tables/table-editable.reel/table-editable.css
+++ b/ui/tables/table-editable.reel/table-editable.css
@@ -7,10 +7,7 @@
     margin-bottom: .5em;
 }
 
-.TableEditable-title {
-    /* font-size: 1.25em; */
-    display: inline-block;
-}
+.TableEditable-title { display: inline-block; }
 
 /* Select Cells */
 
@@ -26,6 +23,7 @@
 
 .TableEditable-rowControls {
     position: absolute;
+    z-index: 999;
     background: #3d4c5b;
     padding: .5em;
     transform: translateY(-1px);
@@ -41,7 +39,6 @@
 .TableEditable .Table-body-top.Table-row-group .Table-cells {
     /* magic # based on checkbox width */
     padding-left: 2.5em;
-    /* border: 1px solid #1a1d1f; */
     background-color: #3d4c5b;
 }
 
